rust/crates/spek/src/snapshots/spek__stft__tests__hop4.win7.window_hann.backend_phastft.spectogram.snap
---
source: crates/spek/src/stft.rs
expression: spectogram
---
Spectrogram {
    data: [
        2.5250711,
        -1.3689318,
        -0.19628239,
        0.20820946,
        0.1889385,
        0.0,
        -0.430358,
        -0.04005897,
        0.41225582,
        0.0,
        1.0652959,
        -0.087069765,
        -0.50656044,
        -0.18539514,
        0.49275464,
        0.0,
        -0.583827,
        -0.2527725,
        0.43812808,
        0.0,
        1.3269901,
        -0.82226324,
        0.16598922,
        -0.112164736,
        0.2098875,
        0.0,
        -0.23310137,
        0.0939298,
        0.020452298,
        0.0,
        1.6622417,
        -0.92705095,
        0.103330255,
        -0.1955817,
        0.37636304,
        0.0,
        -0.05718121,
        -0.19820726,
        0.15970436,
        0.0,
        1.5126412,
        -0.45273906,
        -0.6257458,
        0.3629893,
        -0.08164996,
        0.0,
        -0.677199,
        0.08069086,
        0.2514793,
        0.0,
        1.838356,
        -0.9734211,
        -0.17027864,
        0.50001,
        -0.5509767,
        0.0,
        -0.51938456,
        0.21006167,
        0.006230414,
        0.0,
        0.7868475,
        -0.2387083,
        -0.12351377,
        0.0011846274,
        -0.064772636,
        0.0,
        -0.29597765,
        -0.15702298,
        0.15574823,
        0.0,
        1.8894877,
        -1.2363737,
        0.14925742,
        0.58888006,
        -0.8930153,
        0.0,
        -0.18185414,
        0.32797813,
        -0.42424977,
        0.0,
        1.4419589,
        -0.48022565,
        -0.43074983,
        0.3587303,
        -0.33746845,
        0.0,
        -0.4705962,
        -0.2936486,
        0.46658885,
        0.0,
        1.8492029,
        -1.1818287,
        0.31907433,
        0.4177995,
        -0.9592932,
        0.0,
        -0.4625774,
        0.36487615,
        -0.4397139,
        0.0,
        1.6442578,
        -1.1101791,
        0.5294505,
        -0.14521042,
        -0.19237989,
        0.0,
        -0.592483,
        0.50432986,
        -0.45447752,
        0.0,
    ],
    frames: 11,
    bins: 5,
}
