rust/crates/spek/src/snapshots/spek__stft__tests__hop4.win7.window_hann.backend_realfft.49.magnitude.snap
---
source: crates/spek/src/stft.rs
expression: magnitude
---
Spectrogram {
    data: [
        48.4541,
        33.161377,
        9.145998,
        1.5414587,
        0.40585518,
        202.4541,
        125.52422,
        21.411356,
        4.247639,
        0.8696976,
        468.4541,
        283.7779,
        39.00693,
        8.475669,
        1.3335419,
        846.45404,
        508.48053,
        62.754154,
        14.371316,
        1.7974243,
        1336.4541,
        799.7112,
        93.023026,
        21.975512,
        2.2612305,
        1938.4541,
        1157.4897,
        129.97086,
        31.301647,
        2.7251587,
        2652.454,
        1581.8229,
        173.66878,
        42.35514,
        3.189087,
        3478.454,
        2072.7136,
        224.15163,
        55.138226,
        3.652954,
        4416.454,
        2630.163,
        281.43765,
        69.6524,
        4.1169434,
        5466.4536,
        3254.1719,
        345.53745,
        85.89775,
        4.5805664,
        6628.4536,
        3944.7407,
        416.45694,
        103.87513,
        5.0444336,
    ],
    frame_count: 11,
    bin_count: 5,
}
