rust/crates/spek/src/snapshots/spek__stft__tests__hop4.win7.window_hann.backend_realfft.49.spectogram.snap
---
source: crates/spek/src/stft.rs
expression: spectogram
---
Spectrogram {
    data: [
        Complex {
            re: 48.4541,
            im: 0.0,
        },
        Complex {
            re: -31.929136,
            im: 8.955839,
        },
        Complex {
            re: 5.9855223,
            im: -6.9154034,
        },
        Complex {
            re: 1.5136356,
            im: 0.2915516,
        },
        Complex {
            re: 0.40585518,
            im: 0.0,
        },
        Complex {
            re: 202.4541,
            im: 0.0,
        },
        Complex {
            re: -125.44602,
            im: -4.430046,
        },
        Complex {
            re: 20.000107,
            im: -7.6447296,
        },
        Complex {
            re: 3.7840195,
            im: 1.9296722,
        },
        Complex {
            re: 0.8696976,
            im: 0.0,
        },
        Complex {
            re: 468.4541,
            im: 0.0,
        },
        Complex {
            re: -280.4569,
            im: -43.287598,
        },
        Complex {
            re: 38.845688,
            im: -3.5430374,
        },
        Complex {
            re: 6.7174225,
            im: 5.168482,
        },
        Complex {
            re: 1.3335419,
            im: 0.0,
        },
        Complex {
            re: 846.45404,
            im: 0.0,
        },
        Complex {
            re: -496.96185,
            im: -107.61679,
        },
        Complex {
            re: 62.522278,
            im: 5.3896637,
        },
        Complex {
            re: 10.313843,
            im: 10.007965,
        },
        Complex {
            re: 1.7974243,
            im: 0.0,
        },
        Complex {
            re: 1336.4541,
            im: 0.0,
        },
        Complex {
            re: -774.9608,
            im: -197.41768,
        },
        Complex {
            re: 91.02985,
            im: 19.15335,
        },
        Complex {
            re: 14.573364,
            im: 16.448105,
        },
        Complex {
            re: 2.2612305,
            im: 0.0,
        },
        Complex {
            re: 1938.4541,
            im: 0.0,
        },
        Complex {
            re: -1114.4539,
            im: -312.69022,
        },
        Complex {
            re: 124.36844,
            im: 37.748047,
        },
        Complex {
            re: 19.495789,
            im: 24.488922,
        },
        Complex {
            re: 2.7251587,
            im: 0.0,
        },
        Complex {
            re: 2652.454,
            im: 0.0,
        },
        Complex {
            re: -1515.4408,
            im: -453.4344,
        },
        Complex {
            re: 162.53802,
            im: 61.17383,
        },
        Complex {
            re: 25.081299,
            im: 34.130432,
        },
        Complex {
            re: 3.189087,
            im: 0.0,
        },
        Complex {
            re: 3478.454,
            im: 0.0,
        },
        Complex {
            re: -1977.9219,
            im: -619.65027,
        },
        Complex {
            re: 205.53864,
            im: 89.43054,
        },
        Complex {
            re: 31.329773,
            im: 45.37256,
        },
        Complex {
            re: 3.652954,
            im: 0.0,
        },
        Complex {
            re: 4416.454,
            im: 0.0,
        },
        Complex {
            re: -2501.897,
            im: -811.33777,
        },
        Complex {
            re: 253.37018,
            im: 122.51819,
        },
        Complex {
            re: 38.241333,
            im: 58.215607,
        },
        Complex {
            re: 4.1169434,
            im: 0.0,
        },
        Complex {
            re: 5466.4536,
            im: 0.0,
        },
        Complex {
            re: -3087.366,
            im: -1028.4968,
        },
        Complex {
            re: 306.03284,
            im: 160.43701,
        },
        Complex {
            re: 45.815674,
            im: 72.65912,
        },
        Complex {
            re: 4.5805664,
            im: 0.0,
        },
        Complex {
            re: 6628.4536,
            im: 0.0,
        },
        Complex {
            re: -3734.329,
            im: -1271.1278,
        },
        Complex {
            re: 363.5265,
            im: 203.18677,
        },
        Complex {
            re: 54.053467,
            im: 88.70325,
        },
        Complex {
            re: 5.0444336,
            im: 0.0,
        },
    ],
    frames: 11,
    bins: 5,
}
