rust/crates/spek/src/snapshots/spek__stft__tests__signal.snap
---
source: crates/spek/src/stft.rs
expression: "&signal"
---
[
    0.2709815,
    0.14039207,
    0.9799018,
    0.5933856,
    0.61059517,
    0.94498706,
    0.9437634,
    0.017621636,
    0.1433295,
    0.14989191,
    0.3500976,
    0.3432361,
    0.4915536,
    0.3338886,
    0.4633286,
    0.2339502,
    0.5905582,
    0.58521235,
    0.92837656,
    0.4617837,
    0.04721266,
    0.40581423,
    0.54787743,
    0.73895377,
    0.24903673,
    0.680407,
    0.38292885,
    0.1413948,
    0.12494874,
    0.26719624,
    0.04359156,
    0.90439653,
    0.34061247,
    0.7874479,
    0.7853363,
    0.31355858,
    0.06391233,
    0.725452,
    0.060834944,
    0.9306435,
    0.40191567,
    0.6267639,
    0.136805,
    0.74838084,
    0.66039455,
    0.14560574,
    0.07766461,
    0.2333228,
    0.049257338,
]
